@@ -1,6 +1,5 @@
 Package: vcd
 Version: 1.4-0
-Date: 2015-4-13
 Title: Visualizing Categorical Data
 Authors@R: c(person(given = "David", family = "Meyer", role = c("aut", "cre"), email = "David.Meyer@R-project.org"),
              person(given = "Achim", family = "Zeileis", role = c("aut")),
